--- a/super-sprinter-3000-Noncsi/super_sprinter_3000/templates/layout.html
+++ b/super-sprinter-3000-Noncsi/super_sprinter_3000/templates/layout.html
@@ -1,8 +1,12 @@
 <!doctype html>
+
+<head>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+</head>
 <title>Super Sprinter 3000</title>
 <link rel=stylesheet type=text/css href="{{ url_for('static', filename='style.css') }}">
 <div class=page>
-    <h1>Super Sprinter 3000 &#x1f45f;</h1>
+    <h1>Super Sprinter 3000</h1>
     <div class=metanav>
     </div>
     {% for message in get_flashed_messages() %}
