--- a/super-sprinter-3000-Noncsi/super_sprinter_3000/static/style.css
+++ b/super-sprinter-3000-Noncsi/super_sprinter_3000/static/style.css
@@ -1,11 +1,15 @@
-body            { font-family: sans-serif; background: #eee; }
-a, h1, h2       { color: #000000; }
-h1, h2          { font-family: 'Georgia', serif; margin: 0; }
-h1              { border-bottom: 2px solid #eee; }
-h2              { font-size: 1.2em; }
+body            { font-family: sans-serif; background: #A52A2A; }
+a, h1, h2       { color: #700000; }
+h1, h2          { font-family: 'Futura', sans-serif; margin:0; }
+h2              { font-size: 3em; }
 
-.page           { margin: 2em auto; width: 35em; border: 5px solid #ccc;
-                  padding: 0.8em; background: white; }
+
+.table          {border-collapse:collapse; width: 100%;}
+td, th          {text-align: center ; padding: 8px}
+tr:nth-child(even){background-color:#f2f2f2}
+th {background-color:#A52A2A; color:white;}
+.page           { margin: 2em auto; width: 60em;
+                  padding: 2.4em; background: white; }
 .entries        { list-style: none; margin: 0; padding: 0; }
 .entries li     { margin: 0.8em 1.2em; }
 .entries li h2  { margin-left: -1em; }
