--- a/super-sprinter-3000-Noncsi/super_sprinter_3000/templates/list.html
+++ b/super-sprinter-3000-Noncsi/super_sprinter_3000/templates/list.html
@@ -1,5 +1,6 @@
 {% extends "layout.html" %} {% block body %}
-<a href="{{ url_for('show_story') }}">&#x2795; New Story</a>
+<a href="{{ url_for('show_story') }}"></p>
+    <i class="fa fa-plus" style="font-size:24px;"></i></a>
 <table>
     <th>Story ID</th>
     <th>Story Title</th>
@@ -20,9 +21,13 @@
         <td>{{ entry.estimation_time }}</td>
         <td>{{ entry.status }}</td>
         <td>
-            <a href="{{ url_for('edit_story', story_id=entry.id) }}">&#128394;</a></td>
+            <a href="{{ url_for('edit_story', story_id=entry.id) }}"></p>
+                <i class="fa fa-pencil" style="font-size:24px;"></i></a>
+        </td>
         <td>
-            <a href="{{ url_for('show_story') }}">&#x1f5d1;</a></td>
+            <a href="{{ url_for('delete_story', story_id=entry.id) }}"></p>
+                <i class="fa fa-trash" style="font-size:24px;"></i></a>
+        </td>
     </tr>
     {% endfor %}
 </table>
