--- a/super-sprinter-3000-Noncsi/super_sprinter_3000/static/style.css
+++ b/super-sprinter-3000-Noncsi/super_sprinter_3000/static/style.css
@@ -1,22 +1,73 @@
-body            { font-family: sans-serif; background: #A52A2A; }
-a, h1, h2       { color: #700000; }
-h1, h2          { font-family: 'Futura', sans-serif; margin:0; }
-h2              { font-size: 3em; }
+body            { /*comment*/
+                padding-top:50px;
+                font-family: sans-serif; 
+                background: #A52A2A; 
+                }
+a, h1, h2       { 
+                color: #700000; 
+                }
+h1, h2          { 
+                font-family: 'Futura', sans-serif; 
+                margin:0; 
+                }
+h2              { 
+                font-size: 3em; 
+                }
 
 
-.table          {border-collapse:collapse; width: 100%;}
-td, th          {text-align: center ; padding: 8px}
-tr:nth-child(even){background-color:#f2f2f2}
-th {background-color:#A52A2A; color:white;}
-.page           { margin: 2em auto; width: 60em;
-                  padding: 2.4em; background: white; }
-.entries        { list-style: none; margin: 0; padding: 0; }
-.entries li     { margin: 0.8em 1.2em; }
-.entries li h2  { margin-left: -1em; }
-.add-entry      { font-size: 0.9em; border-bottom: 1px solid #ccc; }
-.add-entry dl   { font-weight: bold; }
-.metanav        { text-align: right; font-size: 0.8em; padding: 0.3em;
-                  margin-bottom: 1em; background: #fafafa; }
-.flash          { background: #cee5F5; padding: 0.5em;
-                  border: 1px solid #aacbe2; }
-.error          { background: #f0d6d6; padding: 0.5em; }
+.table          {
+                border-collapse:collapse; 
+                width: 100%;
+                }
+td, th          {
+                text-align: center ; 
+                padding: 8px
+                }
+tr:nth-child(even){
+                background-color:#f2f2f2
+                }
+th              {
+                background-color:#A52A2A; 
+                color:white;
+                }
+.page           { 
+                margin: 2em auto; 
+                width: 60em;
+                padding: 2.4em; 
+                background: white; 
+                }
+.entries        {
+                list-style: none; 
+                margin: 0; 
+                padding: 0;
+                }
+.entries li     {
+                margin: 0.8em 1.2em;
+                }
+.entries li h2  {
+                margin-left: -1em;
+                }
+.add-entry      {
+                font-size: 0.9em; 
+                border-bottom: 1px solid #ccc;
+                }
+.add-entry dl   { 
+                font-weight: bold; 
+                }
+.metanav        {  
+                text-align: right; 
+                font-size: 0.8em; 
+                padding: 0.3em;
+                margin-bottom: 1em; 
+                background: #fafafa;
+                }
+.flash          {
+                background: #cee5F5; 
+                padding: 0.5em;
+                border: 1px solid #aacbe2; 
+                }
+.error          {
+                background: #f0d6d6; 
+                padding: 0.5em; 
+                }
+.input-group
